add copy button

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <h3>Formatted Data</h3>
     <table id="outputTable"></table>
-
+    <button onclick="copyTableToClipboard()">Copy to Clipboard</button>
     <script src="app.js"></script>
 
 </body>
